fix homepage spacing

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,8 +38,11 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
-body {
-	line-height: 1;
+html {
+	min-height: 100%;
+  overflow: auto;
+  margin:0;
+  padding:0;
 }
 ol, ul {
 	list-style: none;
@@ -57,18 +60,49 @@ table {
 	border-spacing: 0;
 }
 
+#wrapper {
+  padding-left: 120px;
+  height: 100%;
+}
+
+#sidebar-wrapper {
+  margin-left: -120px;
+  left: 120px;
+  width: 120px;
+  background: #CCC;
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+}
+
+#page-content-wrapper {
+  width: 100%;
+  height: 100%;
+}
+
+.page-content {
+  height: 100%;
+}
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 120px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.header-col {
+  border-right: 1px solid gray;
+}
+
 .home-header {
   color: limegreen;
   font-size: 3em;
-}
-
-#sidebar {
-  list-style: none;
-  background-color: lightgray;
-  height: -webkit-calc(100vh);
-  height: -moz-calc(100vh);
-  position: absolute;;
-  width: 120px;
+  display: float;
+  margin: 10px;
 }
 
 .logo {
@@ -79,16 +113,26 @@ table {
   margin-top: 17px;
 }
 
-#grid {
-  padding: 0;
+.container-fluid {
+  height: 100%;
 }
 
+.row {
+  height: 100%;
+}
 .col {
   padding: 0;
 }
 
 .search-form {
+  height: calc(100vh);
+  background-color: yellow;
+  border: 1px solid black;
+  position: relative;
+}
 
+.notes-header {
+  text-align: center;
 }
 
 input {
@@ -97,4 +141,26 @@ input {
 
 .note-detail{
   margin-left: 20px;
+  background-color: lightblue;
+  height: calc(100vh );
+  position: relative;
+}
+
+.note-detail-div {
+  height: 100%;
+}
+
+.note-detail-form {
+  height: 100%;
+}
+.text-area {
+  box-sizing: border-box; /* fit parent width */
+  width: 100%;
+  height: 70%;
+}
+
+.update-note-button {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
 }
